# aptos-rust-sdk

./: .gitignore  Cargo.toml  README.md  rust-toolchain.toml
.cargo/: config.toml
crates/aptos-crypto/: Cargo.toml
crates/aptos-crypto-derive/: Cargo.toml
crates/aptos-crypto-derive/src/: lib.rs
crates/aptos-crypto/src/: encoding_type.rs  hash.rs  lib.rs  multi_ed25519.rs  secp256k1_ecdsa.rs  test_utils.rs  traits.rs
crates/aptos-crypto/src/asymmetric_encryption/: elgamal_curve25519_aes256_gcm.rs  mod.rs
crates/aptos-crypto/src/bls12381/: bls12381_validatable.rs
crates/aptos-crypto/src/ed25519/: ed25519_keys.rs  ed25519_sigs.rs
crates/aptos-crypto/src/elgamal/: curve25519.rs  mod.rs
crates/aptos-crypto/src/secp256r1_ecdsa/: secp256r1_ecdsa_keys.rs  secp256r1_ecdsa_sigs.rs
crates/aptos-crypto/src/unit_tests/: bcs_test.rs  bls12381_test.rs  cryptohasher.rs  ed25519_test.rs  hash_test.rs  mod.rs  secp256k1_ecdsa_test.rs
crates/aptos-rust-sdk/: Cargo.toml
crates/aptos-rust-sdk-types/: Cargo.toml
crates/aptos-rust-sdk-types/src/: error.rs  lib.rs  mime_types.rs  serializable.rs  state.rs
crates/aptos-rust-sdk-types/src/api_types/: account.rs  address.rs  chain_id.rs  event.rs  hash.rs  mod.rs  module_id.rs  move_types.rs  numbers.rs  parser.rs  state_key.rs  transaction.rs  transaction_authenticator.rs  type_tag.rs  view.rs  write_set.rs
crates/aptos-rust-sdk-types/src/crypto/: common.rs  mod.rs  traits.rs
crates/aptos-rust-sdk-types/src/crypto/ed25519/: private_key.rs  public_key.rs  signature.rs
crates/aptos-rust-sdk-types/src/crypto/secp256k1/: private_key.rs  public_key.rs  signature.rs
crates/aptos-rust-sdk/src/client/: builder.rs  config.rs  response.rs  rest_api.rs
crates/aptos-rust-sdk/src/tests/client/: mod.rs  rest_api.rs
crates/aptos-rust-sdk/src/tests/crypto/: ed25519.rs  mod.rs  secp256k1.rs
crates/aptos-rust-sdk/src/types/: mod.rs
crates/aptos-rust-sdk/src/types/api_types/: address.rs  event.rs  identifier.rs  mod.rs  module_id.rs  state_key.rs  transaction.rs  transaction_authenticator.rs  type_tag.rs  write_set.rs
crates/aptos-rust-sdk/src/types/crypto/: mod.rs
crates/aptos-rust-sdk/src/types/crypto/ed25519/: public_key.rs
crates/examples/: Cargo.toml
crates/examples/src/: lib.rs  type_parsing_example.rs  view_function_example.rs
src/: lib.rs
src/client/: builder.rs  config.rs  mod.rs  response.rs  rest_api.rs
src/tests/client/: rest_api.rs
src/tests/crypto/: ed25519.rs  secp256k1.rs
src/types/: error.rs  headers.rs  mod.rs  state.rs
src/types/api_types/: chain_id.rs  hash.rs  mod.rs  numbers.rs  state_key.rs  transaction.rs  transaction_authenticator.rs  write_set.rs
src/types/crypto/: common.rs  traits.rs
src/types/crypto/ed25519/: private_key.rs  signature.rs
src/types/crypto/hash/: mod.rs
src/types/crypto/secp256k1/: private_key.rs  public_key.rs  signature.rs
