[workspace]
resolver = "2"

members = [
    "crates/aptos-rust-sdk",
    "crates/aptos-rust-sdk-types",
    "crates/examples"
]

# NOTE: default-members is the complete list of binaries that form the "production Aptos codebase". These members should
# never include crates that require fuzzing features or test features. These are the crates we want built with no extra
# test-only code included.
#
# For more, see the "Conditional compilation for tests" section in documentation/coding_guidelines.md.
default-members = [
    "crates/aptos-rust-sdk",
    "crates/aptos-rust-sdk-types"
]

# All workspace members should inherit these keys
# for package declarations.
[workspace.package]
authors = ["Aptos Labs <opensource@aptoslabs.com>"]
edition = "2021"
homepage = "https://aptoslabs.com"
license = "Apache-2.0"
publish = false
repository = "https://github.com/aptos-labs/aptos-rust-sdk"
rust-version = "1.83.0"

[workspace.dependencies]
# Internal crate dependencies.
# Please do not add any test features here: they should be declared by the individual crate.
aptos-rust-sdk = { path = "crates/aptos-rust-sdk" }
aptos-rust-sdk-types = { path = "crates/aptos-rust-sdk-types" }

# External crate dependencies.
# Please do not add any test features here: they should be declared by the individual crate.
anyhow = "1.0.95"
# TODO: We should get a proper crate for this
bcs = { git = "https://github.com/aptos-labs/bcs.git", rev = "2cde3e8446c460cb17b0c1d6bac7e27e964ac169" }
hex = "0.4.3"
reqwest = { version = "0.12.12", features = ["cookies", "json"] }
serde = "1.0.217"
serde_json = "1.0.135" # TODO: Can we use BCS?
thiserror = "2.0.11"
tokio = { version = "1.43.0" }
url = "2.5.4"
ed25519-dalek = "2.1.1"
rand = "0.8.5"
libsecp256k1 = "0.7.1"
tiny-keccak = { version = "2.0.2", features = ["sha3"] }

[profile.release]
debug = false
overflow-checks = true

# The performance build is not currently recommended
# for production deployments. It has not been widely tested.
[profile.performance]
inherits = "release"
opt-level = 3
debug = true
overflow-checks = true
lto = "thin"
codegen-units = 1

[profile.cli]
inherits = "release"
debug = false
opt-level = "z"
lto = "thin"
strip = true
codegen-units = 1

[profile.ci]
inherits = "release"
debug = "line-tables-only"
overflow-checks = true
debug-assertions = true

[profile.bench]
debug = true
