[workspace]
resolver = "2"

members = [
    "crates/aptos-rust-sdk",
    "crates/aptos-rust-sdk-types",
    "crates/aptos-crypto",
    "crates/aptos-crypto-derive",
    "crates/examples"
]

# NOTE: default-members is the complete list of binaries that form the "production Aptos codebase". These members should
# never include crates that require fuzzing features or test features. These are the crates we want built with no extra
# test-only code included.
#
# For more, see the "Conditional compilation for tests" section in documentation/coding_guidelines.md.
default-members = [
    "crates/aptos-rust-sdk",
    "crates/aptos-rust-sdk-types",
    "crates/aptos-crypto",
    "crates/aptos-crypto-derive"
]

# All workspace members should inherit these keys
# for package declarations.
[workspace.package]
authors = ["Aptos Labs <opensource@aptoslabs.com>"]
edition = "2021"
homepage = "https://aptoslabs.com"
license = "Apache-2.0"
publish = false
repository = "https://github.com/aptos-labs/aptos-rust-sdk"
rust-version = "1.83.0"

[workspace.dependencies]
# Internal crate dependencies.
# Please do not add any test features here: they should be declared by the individual crate.
aptos-rust-sdk = { path = "crates/aptos-rust-sdk" }
aptos-rust-sdk-types = { path = "crates/aptos-rust-sdk-types" }
aptos-crypto = { path = "crates/aptos-crypto" }
aptos-crypto-derive = { path = "crates/aptos-crypto-derive" }

# External crate dependencies.
# Please do not add any test features here: they should be declared by the individual crate.
aes-gcm = "0.10.3"
anyhow = "1.0.71"
arbitrary = { version = "1.3.2", features = ["derive"] }
ark-bn254 = "0.4.0"
ark-ff = "0.4.0"
base64 = "0.22.1"
bcs = { git = "https://github.com/aptos-labs/bcs.git", rev = "d31fab9d81748e2594be5cd5cdf845786a30562d" }
bitvec = "1.0.1"
blst = "0.3.11"
bytes = { version = "1.4.0", features = ["serde"] }
curve25519-dalek = "3"
digest = "0.9.0"
ed25519-dalek = { version = "1.0.1", features = ["std", "serde"] }
ff = { version = "0.13", features = ["derive"] }
hex = { version = "0.4.3", features = ["serde"] }
hkdf = "0.10.0"
libsecp256k1 = "0.7.0"
more-asserts = "0.3.0"
neptune = { version = "13.0.0", default-features = false }
num = "0.4.0"
num-bigint = { version = "0.3.2", features = ["rand"] }
num-integer = "0.1.42"
once_cell = "1.10.0"
p256 = { version = "0.13.2" }
signature = "2.1.0"
proc-macro2 = "1.0.38"
proptest = "1.4.0"
proptest-derive = "0.4.0"
quote = "1.0.18"
rand = "0.7.3"
rand_core = "0.5.1"
reqwest = { version = "0.11.11", features = [
    "blocking",
    "cookies",
    "json",
    "multipart",
    "stream",
] }
sha2 = "0.9.3"
sha3 = "0.9.1"
serde = { version = "1.0.219", features = ["derive", "rc"] }
serde_bytes = "0.11.17"
serde_json = { version = "1.0.140", features = [
    "preserve_order",
    "arbitrary_precision",
] } # Note: arbitrary_precision is required to parse u256 in JSON
serde-name = "0.2.1"
static_assertions = "1.1.0"
syn = { version = "1.0.109", features = ["derive", "extra-traits"] }
thiserror = "2.0.12"
tiny-keccak = { version = "2.0.2", features = ["keccak", "sha3"] }
trybuild = "1.0.104"
tokio = { version = "1.44.1", features = ["full"] }
typenum = "1.18.0"
url = { version = "2.5.4", features = ["serde"] }

[profile.release]
debug = false
overflow-checks = true

# The performance build is not currently recommended
# for production deployments. It has not been widely tested.
[profile.performance]
inherits = "release"
opt-level = 3
debug = true
overflow-checks = true
lto = "thin"
codegen-units = 1

[profile.cli]
inherits = "release"
debug = false
opt-level = "z"
lto = "thin"
strip = true
codegen-units = 1

[profile.ci]
inherits = "release"
debug = "line-tables-only"
overflow-checks = true
debug-assertions = true

[profile.bench]
debug = true
