[package]
name = "aptos-rust-sdk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
ed25519-dalek = { version = "2.1.1", features = ["default", "rand_core"] }
tokio = { version = "1.43.0", features = ["macros"] }

[dependencies]
anyhow = { workspace = true }
bcs = { workspace = true }
hex = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
url = { workspace = true }
ed25519-dalek = { workspace = true }
rand = { workspace = true }
libsecp256k1 = { workspace = true }
tiny-keccak = { workspace = true }