[package]
name = "aptos-rust-sdk"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
ed25519-dalek = { version = "2.1.1", features = ["default", "rand_core"] }
tokio = { version = "1.43.0", features = ["macros"] }

[dependencies]
aptos-crypto = { workspace = true }
aptos-crypto-derive = { workspace = true }

anyhow = { workspace = true }
aptos-bcs = { workspace = true }
hex = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
url = { workspace = true }
ed25519-dalek = { workspace = true }
rand = { workspace = true }
libsecp256k1 = { workspace = true }

aptos-rust-sdk-types = { workspace = true }